--- a/notebooks/Proyecto_Clustering.ipynb
+++ b/notebooks/Proyecto_Clustering.ipynb
@@ -3932,20 +3932,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "6252df3c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "------------------------------------------------------------\n",
+    "# 10. CLUSTER\n",
+    "------------------------------------------------------------"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "cae5e8ca",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Liberías"
+   ]
   },
   {
    "cell_type": "code",
@@ -3953,7 +3955,230 @@
    "id": "cab1bd13",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.cluster import KMeans\n",
+    "from sklearn.metrics import silhouette_score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa9c0a7f",
+   "metadata": {},
+   "source": [
+    "------------------------------------------------------------\n",
+    "## 10.1 Reunir features en un solo DataFrame\n",
+    "------------------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e14daab2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_df = (\n",
+    "    rfm_z                                 # recency, frequency, monetary (z-score)\n",
+    "    .join(customer_payment_diversity.set_index(\"customer_id\"))  # payment_entropy\n",
+    "    .join(customer_topics)                # topic_1 … topic_20\n",
+    ").fillna(0)\n",
+    "\n",
+    "print(\"Matriz final:\", full_df.shape)  # (n_clientes, n_features)\n",
+    "\n",
+    "# Guardamos la llave para re-unir luego\n",
+    "customers = full_df.index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7421c86a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ============================================================\n",
+    "# 1. Escalado\n",
+    "# ============================================================\n",
+    "scaler     = StandardScaler()\n",
+    "\n",
+    "# Select only the numerical columns before scaling\n",
+    "# Or drop the non-numerical column explicitly\n",
+    "X_scaled   = scaler.fit_transform(full_df.select_dtypes(include=np.number))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "062d509b",
+   "metadata": {},
+   "source": [
+    "------------------------------------------------------------\n",
+    "## 10.2 Seleccionar número óptimo de clúster \n",
+    "------------------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09027f1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import threadpoolctl\n",
+    "print(threadpoolctl.__version__)  # debería mostrar 3.x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1bd4fd95",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ============================================================\n",
+    "# codo + silhouette\n",
+    "# ============================================================\n",
+    "Ks = range(2, 11)\n",
+    "inertia, silh = [], []\n",
+    "\n",
+    "for k in Ks:\n",
+    "    km = KMeans(n_clusters=k, random_state=42, n_init=\"auto\")\n",
+    "    labels = km.fit_predict(X_scaled)\n",
+    "    inertia.append(km.inertia_)\n",
+    "    silh.append(silhouette_score(X_scaled, labels))\n",
+    "\n",
+    "plt.figure(figsize=(10,4))\n",
+    "\n",
+    "plt.subplot(1,2,1)\n",
+    "plt.plot(Ks, inertia, \"-o\")\n",
+    "plt.title(\"Método del codo\")\n",
+    "plt.xlabel(\"K\"); plt.ylabel(\"Inercia\")\n",
+    "\n",
+    "plt.subplot(1,2,2)\n",
+    "plt.plot(Ks, silh, \"-o\")\n",
+    "plt.title(\"Silhouette promedio\")\n",
+    "plt.xlabel(\"K\"); plt.ylabel(\"Coef. silhouette\")\n",
+    "\n",
+    "plt.tight_layout(); plt.show()\n",
+    "\n",
+    "# Elige K (ejemplo: 5)\n",
+    "K_OPT = 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9959153d",
+   "metadata": {},
+   "source": [
+    "------------------------------------------------------------\n",
+    "## 10.3 Clustering final con K óptimo\n",
+    "------------------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e7b7eb2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Elige K (ejemplo: 5)\n",
+    "K_OPT = 3\n",
+    "\n",
+    "kmeans = KMeans(n_clusters=K_OPT, random_state=42, n_init=\"auto\")\n",
+    "cluster_labels = kmeans.fit_predict(X_scaled)\n",
+    "\n",
+    "db_index = davies_bouldin_score(X_scaled, cluster_labels)\n",
+    "print(f\"Davies-Bouldin Index para K={K_OPT}: {db_index:.4f}\")\n",
+    "\n",
+    "sil_score = silhouette_score(X_scaled, cluster_labels)\n",
+    "print(f\"Silhouette Score para K={K_OPT}: {sil_score:.4f}\")\n",
+    "\n",
+    "# Añadimos labels al DataFrame original\n",
+    "full_df[\"cluster\"] = cluster_labels\n",
+    "full_df.index.name = \"customer_id\"\n",
+    "\n",
+    "print(full_df.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43773532",
+   "metadata": {},
+   "source": [
+    "## 10.4 Interpretación de topicos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "423e995d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2. Resumen de categorías por tópico\n",
+    "# ------------------------------------------------------------\n",
+    "TOP_N = 10\n",
+    "# Use the previously defined 'file_path' variable\n",
+    "prod_meta = pd.read_excel(file_path, sheet_name=\"Productos\")\n",
+    "prod_meta = prod_meta.set_index(\"product_id\")            # adapta la llave\n",
+    "\n",
+    "for t in product_topics.index:\n",
+    "    # IDs de los TOP_N productos más pesados\n",
+    "    top_ids = (\n",
+    "        product_topics.loc[t]\n",
+    "        .sort_values(ascending=False)\n",
+    "        .head(TOP_N)\n",
+    "        .index\n",
+    "    )\n",
+    "    cats = prod_meta.loc[top_ids, \"subcategory\"].value_counts()\n",
+    "\n",
+    "    print(f\"\\n{t} - categorías dominantes:\")\n",
+    "    print(cats.head())          # las 3-5 primeras suelen bastar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84d5afc2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Diccionario con los nombres propuestos\n",
+    "topic_names = {\n",
+    "    \"topic_1\":  \"Cuidado familiar & básicos\",\n",
+    "    \"topic_2\":  \"Mascotas & panadería\",\n",
+    "    \"topic_3\":  \"Comidas congeladas/preparadas\",\n",
+    "    \"topic_4\":  \"Panadería & lácteos funcionales\",\n",
+    "    \"topic_5\":  \"Snacks mixtos & cocina\",\n",
+    "    \"topic_6\":  \"Dulces & limpieza\",\n",
+    "    \"topic_7\":  \"Limpieza del hogar & verduras\",\n",
+    "    \"topic_8\":  \"Higiene personal & granos\",\n",
+    "    \"topic_9\":  \"Lácteos & alimentos mascota\",\n",
+    "    \"topic_10\": \"Limpieza & proteína mascota\",\n",
+    "    \"topic_11\": \"Limpieza, refrescos & granos\",\n",
+    "    \"topic_12\": \"Cocina dulce & infantil\",\n",
+    "    \"topic_13\": \"Snacks salados & OTC\",\n",
+    "    \"topic_14\": \"Snacks mascota & proteínas\",\n",
+    "    \"topic_15\": \"Higiene premium & lácteos\",\n",
+    "    \"topic_16\": \"Infantil & congelados\",\n",
+    "    \"topic_17\": \"Cuidado piel & mascota\",\n",
+    "    \"topic_18\": \"OTC & bebidas\",\n",
+    "    \"topic_19\": \"Proteínas frescas\",\n",
+    "    \"topic_20\": \"Verduras raíz & snacks pet\"\n",
+    "}\n",
+    "\n",
+    "# Renombrar columnas en customer_topics\n",
+    "customer_topics_named = customer_topics.rename(columns=topic_names)\n",
+    "\n",
+    "# Reemplazar las antiguas columnas en full_df por las renombradas\n",
+    "full_df = (\n",
+    "    full_df.drop(columns=customer_topics.columns)   # quita topic_1 … topic_20\n",
+    "            .join(customer_topics_named)            # agrega las nuevas\n",
+    ")\n",
+    "\n",
+    "print(\"Columnas actualizadas en full_df:\")\n",
+    "print(full_df.columns.tolist())"
+   ]
   }
  ],
  "metadata": {
