--- a/notebooks/Proyecto_Clustering.ipynb
+++ b/notebooks/Proyecto_Clustering.ipynb
@@ -4179,6 +4179,227 @@
     "print(\"Columnas actualizadas en full_df:\")\n",
     "print(full_df.columns.tolist())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59b02f2e",
+   "metadata": {},
+   "source": [
+    "## 10.5 Perfil RFM + entropía + tópicos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da6c7e90",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ============================================================\n",
+    "# 4. Perfil RFM + Entropía + Tópicos RENOMBRADOS\n",
+    "# ============================================================\n",
+    "\n",
+    "# --- 4.1  Identificar columnas de tópicos (ya NO empiezan con \"topic_\") ---\n",
+    "topic_cols = [col for col in full_df.columns if col in topic_names.values()]\n",
+    "\n",
+    "# --- 4.2  Columnas numéricas base (RFM + entropía) + tópicos ---\n",
+    "profile_cols = [\"recency_z\", \"frequency_z\", \"monetary_z\", \"payment_entropy\"] + topic_cols\n",
+    "\n",
+    "# --- 4.3  Perfil promedio por clúster ---\n",
+    "cluster_profile = (\n",
+    "    full_df.groupby(\"cluster\")[profile_cols]\n",
+    "           .mean()\n",
+    "           .round(2)\n",
+    ")\n",
+    "\n",
+    "print(\"\\n=== Medias por clúster (RFM · entropía · tópicos) ===\")\n",
+    "display(cluster_profile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "325f6b35",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ============================================================\n",
+    "# 5. TOP-3 TÓPICOS por clúster (con nombres legibles)\n",
+    "# ============================================================\n",
+    "\n",
+    "# Si ya tienes `topic_names` definido como en el bloque anterior:\n",
+    "topic_cols = list(topic_names.values())            # ['Cuidado familiar & básicos', …]\n",
+    "\n",
+    "# Extrae columnas de tópicos que realmente estén en cluster_profile\n",
+    "topic_cols = [c for c in topic_cols if c in cluster_profile.columns]\n",
+    "\n",
+    "top_topics = (\n",
+    "    cluster_profile[topic_cols]                    # solo tópicos\n",
+    "                 .apply(lambda row: row.nlargest(3).index.tolist(), axis=1)\n",
+    "                 .rename(\"top_topics\")\n",
+    ")\n",
+    "\n",
+    "print(\"\\n=== Top-3 tópicos por clúster ===\")\n",
+    "print(top_topics)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0cb235b6",
+   "metadata": {},
+   "source": [
+    "## 10.6 Resumen resultados del Cluster"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2448a24a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "summary = (\n",
+    "    cluster_profile[[\"recency_z\",\"frequency_z\",\"monetary_z\",\"payment_entropy\"]] # Use the Z-scored column names\n",
+    "    .join(top_topics)\n",
+    "    .reset_index()\n",
+    ")\n",
+    "\n",
+    "print(\"\\nResumen ejecutivo:\")\n",
+    "display(summary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b66cccc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "topic_popularity = customer_topics.iloc[:, :K].sum().sort_values(ascending=False)\n",
+    "plt.figure()\n",
+    "plt.bar(topic_popularity.index, topic_popularity.values)\n",
+    "plt.xticks(rotation=90)\n",
+    "plt.title(\"Popularidad de cada tópico (suma de pesos clientes)\")\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc91c9cf",
+   "metadata": {},
+   "source": [
+    "## 10.7 Análisis Gráfico"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62504840",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cluster_size = full_df[\"cluster\"].value_counts().sort_index()\n",
+    "print(\"\\nClientes por clúster:\\n\", cluster_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94449d94",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1) Barras: tamaño de cada cluster\n",
+    "cluster_size = full_df[\"cluster\"].value_counts().sort_index()\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.bar(cluster_size.index.astype(str), cluster_size.values)\n",
+    "plt.title(\"Clientes por clúster\")\n",
+    "plt.xlabel(\"Clúster\")\n",
+    "plt.ylabel(\"# Clientes\")\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70cdf8b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2) Scatter: Recency vs Monetary coloreado por cluster\n",
+    "plt.figure()\n",
+    "for c in sorted(full_df[\"cluster\"].unique()):\n",
+    "    sub = full_df[full_df[\"cluster\"] == c]\n",
+    "    plt.scatter(sub[\"recency_z\"], sub[\"monetary_z\"], alpha=0.5, label=f\"Cluster {c}\")\n",
+    "plt.xlabel(\"Recency (z)\")\n",
+    "plt.ylabel(\"Monetary (z)\")\n",
+    "plt.title(\"Recency vs Monetary por clúster\")\n",
+    "plt.legend()\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8cf06d1d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ============================================================\n",
+    "# 5. TOP-3 TÓPICOS por clúster (nombres “human friendly”)\n",
+    "# ============================================================\n",
+    "\n",
+    "# --- 5.1  Detectar automáticamente las columnas de tópicos ----------\n",
+    "rfm_cols = [\"recency_z\", \"frequency_z\", \"monetary_z\", \"payment_entropy\"]\n",
+    "topic_cols = [c for c in cluster_profile.columns if c not in rfm_cols]\n",
+    "\n",
+    "# --- 5.2  Obtener los 3 de mayor peso en cada clúster ---------------\n",
+    "top_topics = (\n",
+    "    cluster_profile[topic_cols]\n",
+    "      .apply(lambda row: row.nlargest(3).index.tolist(), axis=1)\n",
+    "      .rename(\"top_topics\")\n",
+    ")\n",
+    "\n",
+    "print(\"\\n=== Top-3 tópicos por clúster ===\")\n",
+    "print(top_topics)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77c9671c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ============================================================\n",
+    "# 4) Heat-map: afinidad a los 5 tópicos más “discriminantes”\n",
+    "#     (con los nombres legibles ya asignados)\n",
+    "# ============================================================\n",
+    "\n",
+    "# --- 4.1  Identificar columnas de tópicos -------------------\n",
+    "rfm_cols   = [\"recency_z\", \"frequency_z\", \"monetary_z\", \"payment_entropy\"]\n",
+    "topic_cols = [c for c in cluster_profile.columns if c not in rfm_cols]\n",
+    "\n",
+    "# --- 4.2  Seleccionar los 5 tópicos con mayor varianza entre clústeres\n",
+    "topic_var        = cluster_profile[topic_cols].var().sort_values(ascending=False)\n",
+    "top_topic_cols   = topic_var.head(5).index\n",
+    "\n",
+    "# --- 4.3  Heat-map de afinidad --------------------------------------\n",
+    "heat = cluster_profile[top_topic_cols]\n",
+    "\n",
+    "plt.figure(figsize=(8, 4))\n",
+    "plt.imshow(heat, interpolation=\"none\")\n",
+    "plt.colorbar(label=\"Peso medio\")\n",
+    "plt.xticks(range(len(heat.columns)), heat.columns, rotation=90)\n",
+    "plt.yticks(range(len(heat.index)),  heat.index)\n",
+    "plt.title(\"Afinidad a los 5 tópicos con mayor variabilidad\")\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n"
+   ]
   }
  ],
  "metadata": {
