inclusion modelos cluster aglomerativo

--- a/notebooks/Proyecto_Clustering.ipynb
+++ b/notebooks/Proyecto_Clustering.ipynb
@@ -14,27 +14,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "906cc00e-39e4-4910-bf61-71427f576654",
+   "execution_count": null,
+   "id": "4a60fae8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#librerias\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.cluster import KMeans\n",
-    "from sklearn.metrics import silhouette_score, davies_bouldin_score\n",
-    "from scipy.stats import entropy\n",
-    "\n",
-    "# Configuración general\n",
-    "pd.set_option('display.max_columns', None)"
+    "import numpy as np\n",
+    "from sklearn.decomposition import PCA\n",
+    "import joblib\n",
+    "import os\n",
+    "import sys"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
+   "id": "7712ecc3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!{sys.executable} -m pip install --upgrade \"threadpoolctl>=3\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "491d0f50-c140-4228-aaa4-530beeb598d0",
    "metadata": {},
    "outputs": [
@@ -49,15 +56,8 @@
     }
    ],
    "source": [
-    "# Carga de datos desde el archivo versionado con DVC\n",
-    "pedidos = pd.read_excel('../data/Data_Set_Global.xlsx', sheet_name='Pedidos')\n",
-    "productos = pd.read_excel('../data/Data_Set_Global.xlsx', sheet_name='Productos')\n",
-    "clientes = pd.read_excel('../data/Data_Set_Global.xlsx', sheet_name='Clientes')\n",
-    "\n",
-    "# Mostrar las dimensiones\n",
-    "print(f\"Pedidos: {pedidos.shape}\")\n",
-    "print(f\"Productos: {productos.shape}\")\n",
-    "print(f\"Clientes: {clientes.shape}\")"
+    "file_path   = \"Data_Set_Global.xlsx\"   # ← Ajusta la ruta si cambia\n",
+    "pedidos     = pd.read_excel(file_path, sheet_name=\"Pedidos\")"
    ]
   },
   {
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "1da7f2b0",
    "metadata": {},
    "outputs": [],
@@ -487,7 +487,7 @@
     "pedidos[\"delivery_delay_min\"] = (\n",
     "    (pedidos[\"actual_delivery_time\"] - pedidos[\"promised_delivery_time\"])\n",
     "    .dt.total_seconds() / 60\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -1076,7 +1076,7 @@
     ")\n",
     "\n",
     "print(\"=== Tabla agregada por cliente ===\")\n",
-    "print(agg.head())\n"
+    "print(agg.head())"
    ]
   },
   {
@@ -1327,7 +1327,7 @@
     "plt.ylabel(\"Clientes\")\n",
     "plt.title(\"Tiempo de conversión\")\n",
     "plt.tight_layout()\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -1786,7 +1786,7 @@
     "import gensim\n",
     "import pandas as pd\n",
     "\n",
-    "# ❶ Lista de 'sentencias' (cada orden = lista de productos)\n",
+    "# Lista de 'sentencias' (cada orden = lista de productos)\n",
     "sentences = (\n",
     "    pedidos.sort_values(\"order_id\")\n",
     "           .groupby(\"order_id\")[\"product_name\"]\n",
@@ -1794,7 +1794,7 @@
     "           .tolist()\n",
     ")\n",
     "\n",
-    "# ❷ Entrena Word2Vec\n",
+    "# Entrena Word2Vec\n",
     "w2v = gensim.models.Word2Vec(\n",
     "        sentences      = sentences,\n",
     "        vector_size    = 50,     # dimensión del embedding\n",
@@ -1804,7 +1804,7 @@
     "        seed           = 42\n",
     "     )\n",
     "\n",
-    "# ❸ Embedding como DataFrame\n",
+    "# Embedding como DataFrame\n",
     "product_vectors = pd.DataFrame(\n",
     "    w2v.wv.vectors,\n",
     "    index = w2v.wv.index_to_key\n",
@@ -3928,7 +3928,7 @@
     "                          columns = rfm.columns + \"_z\") # Add _z suffix\n",
     "\n",
     "print(\"=== RFM Z-scores ===\")\n",
-    "print(rfm_z.head())\n"
+    "print(rfm_z.head())"
    ]
   },
   {
@@ -3946,12 +3946,12 @@
    "id": "cae5e8ca",
    "metadata": {},
    "source": [
-    "Liberías"
+    "Librerías"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "cab1bd13",
    "metadata": {},
    "outputs": [],
@@ -3972,10 +3972,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e14daab2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'rfm_z' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m full_df \u001b[38;5;241m=\u001b[39m (\n\u001b[1;32m----> 2\u001b[0m     rfm_z                                 \u001b[38;5;66;03m# recency, frequency, monetary (z-score)\u001b[39;00m\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;241m.\u001b[39mjoin(customer_payment_diversity\u001b[38;5;241m.\u001b[39mset_index(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcustomer_id\u001b[39m\u001b[38;5;124m\"\u001b[39m))  \u001b[38;5;66;03m# payment_entropy\u001b[39;00m\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;241m.\u001b[39mjoin(customer_topics)                \u001b[38;5;66;03m# topic_1 … topic_20\u001b[39;00m\n\u001b[0;32m      5\u001b[0m )\u001b[38;5;241m.\u001b[39mfillna(\u001b[38;5;241m0\u001b[39m)\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMatriz final:\u001b[39m\u001b[38;5;124m\"\u001b[39m, full_df\u001b[38;5;241m.\u001b[39mshape)  \u001b[38;5;66;03m# (n_clientes, n_features)\u001b[39;00m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m# Guardamos la llave para re-unir luego\u001b[39;00m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'rfm_z' is not defined"
+     ]
+    }
+   ],
    "source": [
     "full_df = (\n",
     "    rfm_z                                 # recency, frequency, monetary (z-score)\n",
@@ -4398,7 +4410,172 @@
     "plt.yticks(range(len(heat.index)),  heat.index)\n",
     "plt.title(\"Afinidad a los 5 tópicos con mayor variabilidad\")\n",
     "plt.tight_layout()\n",
-    "plt.show()\n"
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c137028d",
+   "metadata": {},
+   "source": [
+    "------------------------------------------------------------\n",
+    "# 11. CLUSTER AGLOMERATIVO \n",
+    "------------------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5d71b8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.cluster import AgglomerativeClustering, DBSCAN\n",
+    "from sklearn.metrics import silhouette_score\n",
+    "from sklearn.decomposition import PCA\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# 1. Reducimos a 2D para visualización con PCA\n",
+    "pca = PCA(n_components=2)\n",
+    "X_pca = pca.fit_transform(X_scaled)\n",
+    "\n",
+    "# 2. Clustering alternativo\n",
+    "\n",
+    "# Agglomerative Clustering\n",
+    "agg = AgglomerativeClustering(n_clusters=3)\n",
+    "agg_labels = agg.fit_predict(X_scaled)\n",
+    "full_df[\"cluster_agg\"] = agg_labels\n",
+    "agg_sil = silhouette_score(X_scaled, agg_labels)\n",
+    "\n",
+    "# 3. Visualización\n",
+    "methods = {\n",
+    "    \"KMeans\": full_df[\"cluster\"],\n",
+    "    \"Agglomerative\": full_df[\"cluster_agg\"]}\n",
+    "# 4. Graficas\n",
+    "fig, axs = plt.subplots(len(methods), 1, figsize=(8, 12))  # N filas, 1 columna\n",
+    "\n",
+    "for i, (name, labels) in enumerate(methods.items()):\n",
+    "    axs[i].scatter(X_pca[:, 0], X_pca[:, 1], c=labels, cmap='viridis', alpha=0.6)\n",
+    "    axs[i].set_title(f\"{name} Clustering\")\n",
+    "    axs[i].set_xlabel(\"PCA 1\")\n",
+    "    axs[i].set_ylabel(\"PCA 2\")\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "\n",
+    "# 5. Silhouette scores para comparar modelos\n",
+    "print(f\"Silhouette Score - KMeans:         {silhouette_score(X_scaled, full_df['cluster']):.3f}\")\n",
+    "print(f\"Silhouette Score - Agglomerative:  {agg_sil:.3f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17459f53",
+   "metadata": {},
+   "source": [
+    "cluster_size = full_df[\"cluster_agg\"].value_counts().sort_index()\n",
+    "print(\"\\nClientes por clúster agglomerative:\\n\", cluster_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6f0708f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1) Barras: tamaño de cada cluster\n",
+    "cluster_size = full_df[\"cluster_agg\"].value_counts().sort_index()\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.bar(cluster_size.index.astype(str), cluster_size.values)\n",
+    "plt.title(\"Clientes por clúster aglomerativo\")\n",
+    "plt.xlabel(\"Clúster\")\n",
+    "plt.ylabel(\"# Clientes\")\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a877ce6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ============================================================\n",
+    "# 4. Perfil RFM + Entropía + Tópicos RENOMBRADOS\n",
+    "# ============================================================\n",
+    "\n",
+    "# --- 4.1  Identificar columnas de tópicos (ya NO empiezan con \"topic_\") ---\n",
+    "topic_cols = [col for col in full_df.columns if col in topic_names.values()]\n",
+    "\n",
+    "# --- 4.2  Columnas numéricas base (RFM + entropía) + tópicos ---\n",
+    "profile_cols = [\"recency_z\", \"frequency_z\", \"monetary_z\", \"payment_entropy\"] + topic_cols\n",
+    "\n",
+    "# --- 4.3  Perfil promedio por clúster ---\n",
+    "cluster_profile = (\n",
+    "    full_df.groupby(\"cluster_agg\")[profile_cols]\n",
+    "           .mean()\n",
+    "           .round(2)\n",
+    ")\n",
+    "\n",
+    "print(\"\\n=== Medias por clúster aglomerativo (RFM · entropía · tópicos) ===\")\n",
+    "display(cluster_profile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c233e085",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ============================================================\n",
+    "# 5. TOP-3 TÓPICOS por clúster aglomerativo (con nombres legibles)\n",
+    "# ============================================================\n",
+    "\n",
+    "topic_cols = list(topic_names.values())\n",
+    "\n",
+    "# Extrae columnas de tópicos que realmente estén en cluster_profile\n",
+    "topic_cols = [c for c in topic_cols if c in cluster_profile.columns]\n",
+    "\n",
+    "top_topics = (\n",
+    "    cluster_profile[topic_cols]                    # solo tópicos\n",
+    "                 .apply(lambda row: row.nlargest(3).index.tolist(), axis=1)\n",
+    "                 .rename(\"top_topics\")\n",
+    ")\n",
+    "\n",
+    "print(\"\\n=== Top-3 tópicos por clúster aglomerativo===\")\n",
+    "print(top_topics)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33c056ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "summary = (\n",
+    "    cluster_profile[[\"recency_z\",\"frequency_z\",\"monetary_z\",\"payment_entropy\"]] # Use the Z-scored column names\n",
+    "    .join(top_topics)\n",
+    "    .reset_index()\n",
+    ")\n",
+    "\n",
+    "print(\"\\nResumen ejecutivo:\")\n",
+    "display(summary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f09905b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_df.to_csv(\"resultados_clustering.csv\", index=False)"
    ]
   }
  ],
